overflow on big words on topic title is fixed

--- a/src/styles/Topics.css
+++ b/src/styles/Topics.css
@@ -701,9 +701,12 @@ html {
 }
 
 .topic-header-text {
-    display: inline-block;
+    display: block;
     text-align: center;
     cursor: default;
+    word-break: break-word;
+    white-space: normal;
+    margin: 0 auto;
 }
 
 .topic-header-pdf {
